[tool.poetry]
name = "dmatrix2np"
version = "0.1.0"
description = "Convert XGBoost's DMatrix to numpy array"
authors = ["Aporia technologies ltd <dev@aporia.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
